# OpenCV-Template-Matching-with-Qt

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matchingmanager.cpp  matchingmanager.h  resizableimagelabel.cpp  resizableimagelabel.h
